--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </div>
       </div>
     </div>
-    <!-- <div class="footer">
+    <div class="footer">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="https://twitter.com/tulsiprasad22" target="_blank">Tulsi Prasad</a>.
       </p>
-    </div> -->
+    </div>
   </div>
 
 </body>
